--- a/Flask_Web_App/templates/timeline.html
+++ b/Flask_Web_App/templates/timeline.html
@@ -40,7 +40,7 @@
         </div>
         {% else %}
             <div class="alert alert-info text-center">
-                No milestones or phases found. Mark tasks as milestones or set their status to In Progress/Completed to show them here.
+                No milestones or phases found. Mark items as milestones or set their status to In Progress/Completed to show them here.
             </div>
         {% endif %}
     </div>
